Release 0.2-0:
  * Vignette rewrite.

Release 0.1-2:
  * Change param "remote_addr" to "addr" in client().
  * Minor improvements to the repl.
  * Better error checking and handling for addresses.

Release 0.1-1:
  * Add some remote checks, address validation in client.
  * Changed behavior of exit(); added "client.only" option.
  * Rearrange internals.
  * Add vignette.
  * Use pbdZMQ 0.2-1.

Release 0.1-0:
  * Added s2c() and c2s().
  * Added lsc(), rmc(), and evalc().
  * Imported functionality from pbdCS.